--- a/public/index2.html
+++ b/public/index2.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <title>Tool nhắc cầu</title>
+  <title>Tool dự đoán cầu</title>
   <link rel="stylesheet" type="text/css" href="style.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 </head>
@@ -10,7 +10,7 @@
 <body>
   <div class="container">
     <div class="top">
-      <h2 class="title">Tool nhắc cầu</h2>
+      <h2 class="title">Tool dự đoán cầu</h2>
       <div class="top-text">Ds cầu hiện có:</div>
       <div id="mangBanDauDisplay"></div>
     </div>
@@ -20,9 +20,12 @@
           <label for="addInput">Nhập cầu:</label><br>
           <input type="text" id="addInput" name="addInput" placeholder="123..."
             oninput="formatNumber('addInput', 'addFormatted')" autocomplete="off"><br>
+          <label for="addInput">Số cột:</label><br>
+          <input type="text" id="columnNum" name="columnNum" placeholder="5 or 6"
+          size="2" autocomplete="off" maxlength="1" onkeypress="return isNumberKey(event)"><br>
           <span id="addFormatted"></span><br>
           <input type="submit" value="Thêm">
-
+          
         </form>
 
       </div>
@@ -36,13 +39,13 @@
         </form>
       </div>
     </div>
+    
+    <div class="resetButton"><button id="resetInputsBtn">Reset input</button></div>
+    <div class="resetBtn"><button id="resetBtn">Reset data</button></div>
     <div class="bottom">
       <span">Quất:</span>
         <span id="result"></span>
     </div>
-    <div class="resetButton"><button id="resetInputsBtn">Reset input</button></div>
-    <div class="resetBtn"><button id="resetBtn">Reset data</button></div>
-
   </div>
   <script src="./script.js"></script>
 
